<resources>
    <string name="app_name" translatable="false">ResiMob</string>
    <string name="mail_adress">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ? contact us</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_user">Add User</string>
    <string name="hi">Hi! %1$s</string>
    <string name="restaurant">Restaurant</string>
    <string name="doctor">Doctor</string>
    <string name="gym">Gym</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="administration">Administration</string>
    <string name="sport_room">Sport Room</string>
    <string name="bathroom">Bathroom</string>
    <string name="feedback">Feedback</string>
    <string name="problem">Problem</string>
    <string name="timings">Timings</string>
    <string name="programme">Programme</string>
    <string name="girls">Girls</string>
    <string name="boys">Boys</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OnBoardingMainText1">Welcome to ResiMob</string>
    <string name="OnBoardingSecondText1">Stay connected and informed on campus with the University Resident app! Download now for package tracking, maintenance requests, and more.</string>
    <string name="OnBoardingMainText2">How to Use ResiMob</string>
    <string name="OnBoardingSecondText2">Getting started is easy! Log in with your university email, explore features with our tutorials, and reach out to support with questions.</string>
    <string name="OnBoardingMainText3">Benefits of Using ResiMob</string>
    <string name="OnBoardingSecondText3">Stay up-to-date on events, submit maintenance requests, and access campus resources from your phone.</string>
    <string name="gym_timings">Gym Timings</string>
    <string name="football">Football</string>
    <string name="national">National</string>
    <string name="international">International</string>
    <string name="President">President</string>
    <string-array name="presidents2">
        <item>Chef service activité</item>
        <item>Chef service restaurant</item>
        <item>Chef service security et maintenance</item>
        <item>Chef service hébergement</item>
    </string-array>
    <string-array name="presidents">
        <item>Chef service activité</item>
        <item>Chef service restaurant</item>
        <item>Chef service security et maintenance</item>
    </string-array>
    <string-array name="pre1_problems">
        <item>Sport</item>
        <item>Culture</item>
        <item>Santé</item>
    </string-array>
    <string-array name="pre2_problems">
        <item>Horaires</item>
        <item>Nourriture</item>
    </string-array>
    <string-array name="pre3_problems">
        <item>Electricité</item>
        <item>Plombier</item>
        <item>DIY</item>
        <item>Sécurité interne</item>
        <item>Sécurité externe</item>
    </string-array>
    <string-array name="sport_details">
        <item>Timing not appropriate</item>
        <item>Tournament request</item>
        <item>Lack of equipment</item>
    </string-array>
    <string-array name="culture_details">
        <item>Excursion request</item>
        <item>Awareness campaign request</item>
    </string-array>
    <string-array name="health_details">
        <item>Timing not appropriate</item>
        <item>Lack of medicines</item>
        <item>Problem with the doctor</item>
    </string-array>
    <string-array name="timings_details">
        <item>Timing not appropriate</item>
        <item>Timing not sufficient</item>
    </string-array>
    <string-array name="food_details">
        <item>Food quality</item>
        <item>Food quantity</item>
    </string-array>
    <string-array name="elec_details">
        <item>Blackout</item>
        <item>lamp replacement</item>
        <item>Socket dysfunction</item>
        <item>Electrical ground</item>
    </string-array>
    <string-array name="plumbing_details">
        <item>Water cut</item>
        <item>Water leak</item>
        <item>Sink clogging</item>
        <item>Heating dysfunction</item>
    </string-array>
    <string-array name="diy_details">
        <item>Door lock request</item>
        <item>Window glass repair</item>
        <item>Hole in the wall request</item>
        <item>Superimposed installation request</item>
        <item></item>
    </string-array>
    <string-array name="internal_details">
        <item>Harassment</item>
    </string-array>
    <string-array name="external_details">
        <item>Animal\'s danger</item>
        <item>Strangers</item>
    </string-array>
    <string name="select_president">Select President</string>
    <string name="what_is_the_problem">What is the problem?</string>
    <string name="details">Details</string>
    <string name="send">Send</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tus">Tus</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="fri">Fri</string>
    <string name="sport">Sport</string>
    <string name="kind">Kind</string>
    <string name="gender">Gender</string>
    <string name="time">Time</string>
    <string name="volleyball">Volleyball</string>
    <string name="basketball">Basketball</string>
    <string name="objects">Objects</string>
    <string name="lost_objects">Lost Objects</string>
    <string name="found_objects">Found Objects</string>
    <string name="founder">Founder</string>
    <string name="loser">Loser</string>
    <string name="place">Place</string>
    <string name="you_found_an_objects">You found an object?</string>
    <string name="what_did_you_found">What did you found?</string>
    <string name="where_did_you_found_it">Where did you found it?</string>
    <string name="you_lost_an_object">You lost an object?</string>
    <string name="what_did_you_lost">What did you lost?</string>
    <string name="where_did_you_lost_it">Where did you lost it?</string>
    <string name="add_picture">Add Picture</string>
    <string name="submit">Submit</string>
    <string name="please_enter_a_text">Please enter a text</string>
    <string name="please_add_an_image">Please add an image</string>
    <string name="found_object_submitted">Found object submitted</string>
    <string name="lost_object_submitted">Lost object submitted</string>
    <string name="you_have_to_select_a_problem">You have to select a problem</string>
    <string name="you_have_to_select_a_president">You have to select a president</string>
    <string name="please_select_a_president">Please select a president</string>
    <string name="please_select_a_problem">Please select a problem</string>
    <string name="please_select_a_detail">Please select a detail</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="theme">Dark Theme</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="users">Users</string>
    <string name="notifications">Notifications</string>
    <string name="edit">Edit</string>
    <string name="delete">DELETE</string>
    <string name="description">Description</string>
    <string name="francais">Français</string>
    <string name="english">English</string>
    <string name="hello_admin">Hello Admin !</string>
    <string name="welcome_back">Welcome back</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="cancel">CANCEL</string>
    <string name="set">set</string>
    <string name="good_day_admin">Good day!, Admin</string>
    <string name="add_notification">Add notification</string>
    <string name="title">Title</string>
    <string name="delete_user">Delete user</string>
    <string name="are_you_sure_you_want_to_delete_this_user">Are you sure you want to delete this user?</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="user_deleted">User deleted</string>
    <string name="added_succesfully">Added Successfuly</string>
    <string name="failed">Failed</string>
    <string name="enter_valid_informations">Enter valid informations</string>
    <string name="enter_valid_email">"Enter a valid email "</string>
    <string name="room_bloc_numbre">Room (bloc/numbre)</string>
    <string name="search_for_users">Search for users</string>
    <string name="you_must_enter_more_than_5_letters">You must enter more than 5 letters</string>
    <string name="email_already_exist">Email already exist</string>
    <string name="invalid_password">Invalid password</string>
    <string name="delete_feedback">Delete Feedback</string>
    <string name="are_you_sure_you_want_to_delete_this_feedback">Are you sure you want to delete this feedback?</string>
    <string name="feedback_deleted">Feedback deleted</string>
    <string name="delete_problem">Delete Problem</string>
    <string name="are_you_sure_you_want_to_delete_this_problem">Are you sure you want to delete this problem?</string>
    <string name="delete_object">Delete Object</string>
    <string name="are_you_sure_you_want_to_delete_this_object">Are you sure you want to delete this object?</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="are_you_sure_you_want_to_delet_this_notification">Are you sure you want to delet this notification?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="what_do_you_want_to_change">What do you want to change?</string>
    <string name="enter_time">Enter a timing</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_time">select time</string>
    <string name="day">day</string>
    <string name="name">name</string>
    <string name="meal">meal</string>
    <string name="what_do_you_want_to_edit">what do you want to edit</string>
    <string name="type">type</string>
    <string name="screens">screens</string>
    <string name="time_chnage">time change</string>
    <string name="annoucement">announcement</string>
    <string name="select_type">select type</string>
    <string name="what_is_your_prefered_langage">What is your prefered langage?</string>
    <string name="inforamtions">Informations</string>
    <string name="info">Infos</string>
    <string name="problems">Problems</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="dolyce">- Dolyce</string>
    <string name="maxilase">- Maxilase</string>
    <string name="rabwalyse">- Rabwalyse</string>
    <string name="ideos">- Ideos</string>
    <string name="gripex">- Gripex</string>
    <string name="augmentin">- Augmentin</string>
    <string name="emergency">Emergency</string>
    <string name="emergency_text">In case of an emergency, it\'s important to call for help immediately, please call this numbers :</string>
</resources>