<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorDetails"
    android:orientation="vertical"
    android:background="@color/blue_background"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_button"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/doctor"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/doctor_swipe"
     android:layout_width="match_parent"
     android:layout_height="220dp">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/doctor_rec"
         android:layout_width="match_parent"
         android:layout_height="220dp"
         />
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/pharmacy"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="@string/augmentin"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="@string/gripex"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="@string/ideos"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="@string/rabwalyse"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="@string/maxilase"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="@string/dolyce"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/emergency"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/emergency_text"
            android:textColor="@color/gray"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="0667885258"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="0667885258"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:text="0667885258"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>