<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item android:title="Settings"
            android:checkableBehavior="single">
        <menu>

        <item
            android:id="@+id/admin_language"
            android:title="@string/language"
            android:icon="@drawable/icon_language"
           android:orderInCategory="1"
            app:showAsAction="ifRoom"
            />


        <item
            android:id="@+id/admin_theme"
            android:title="@string/theme"
            android:icon="@drawable/icon_theme"
            android:actionLayout="@layout/drawer_switch"
            app:showAsAction="always"
            android:visible="true"
            />
        </menu></item>
    </group>
    <group >
        <item
            android:id="@+id/admin_other"
            android:title="Other"
            android:checkableBehavior="single">
            <menu>
        <item
            android:id="@+id/admin_privacy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/icon_privacy_tip"
            />
        <item
            android:id="@+id/admin_logout"
            android:title="@string/log_out"
            android:icon="@drawable/icon_logout"
            />
            </menu>
        </item>
    </group>
</menu>