<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportDetails">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/leftarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sport_room"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:nestedScrollingEnabled="true"
        
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/sun"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
       app:cardBackgroundColor="@color/gray"


        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mon"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/gray"

        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tus"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/gray"

        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/tus"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/wed"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/gray"

        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/thu"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/gray"

        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fri"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/gray"

        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sat"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="5dp"
        android:onClick="onCardClick"
        app:cardBackgroundColor="@color/gray"

        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:background="@drawable/sport_white_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>



</LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>