<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DeleteNotificationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/delete_notification"
            android:textColor="@color/blue_button"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start"
            android:text="@string/are_you_sure_you_want_to_delet_this_notification"
            android:textColor="@color/gray"
            android:textSize="15sp" />
        <LinearLayout
            android:id="@+id/vb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/canceldeletenotification"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:background="@drawable/corner_tab_background"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_marginBottom="2dp"

                android:layout_marginEnd="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/blue_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/deletenotification"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:background="@drawable/button"
                android:text="@string/delete"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"


                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>