<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:text="@string/you_found_an_objects"
    android:textSize="20sp"
    android:textColor="@color/blue_button"
    android:fontFamily="@font/poppins_semibold"
    android:gravity="center"
    android:layout_marginBottom="20dp"
    />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_did_you_found"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addFoundObj_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/where_did_you_found_it"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addFoundObj_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addFoundObj_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            /></com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_picture"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>